--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,20 +1,87 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(message: String)
+<html ng-app="rhplay">
+    <head lang="en">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bower_components/bootstrap/dist/css/bootstrap.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bower_components/font-awesome/css/font-awesome.css")">
 
-@*
- * Call the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@main("Welcome to Play") {
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css")">
 
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-     *@
-    @play20.welcome(message, style = "Java")
+        <title>Recursos Humanos</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="/#/"><span class="glyphicon glyphicon-home"></span> Recursos Humanos</a>
+                </div>
 
-}
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="/#/colaboradores"><span class="glyphicon glyphicon-education"></span> Colaboradores</a></li>
+                        <li><a href=""><span class="glyphicon glyphicon-book"></span> Bolsistas</a></li>
+                        <li><a href=""><span class="fa fa-calendar"></span> Estagiários</a></li>
+                        <li><a href=""><span class="fa fa-leaf"></span> Voluntários</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Opções <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="">Sobre</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a href="">Sair</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
+
+        <div class="container-fluid">
+            <div ng-view="">
+
+            </div>
+        </div>
+
+        @*Angular*@
+        <script src="@routes.Assets.versioned("bower_components/angular/angular.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/angular-route/angular-route.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/angular-resource/angular-resource.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/angular-aria/angular-aria.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/angular-animate/angular-animate.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/angular-sanitize/angular-sanitize.js")" type="text/javascript"></script>
+
+        <script src="@routes.Assets.versioned("bower_components/jquery/dist/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/bootstrap/dist/js/bootstrap.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/moment/moment.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/moment/locale/pt-br.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
+
+        @*Angular Loading Bar*@
+        <script src="@routes.Assets.versioned("bower_components/angular-loading-bar/src/loading-bar.js")" type="text/javascript"></script>
+
+        @*Angular Toastr*@
+        <script src="@routes.Assets.versioned("bower_components/angular-toastr/dist/angular-toastr.tpls.js")" type="text/javascript"></script>
+
+        @*Aplicacao Angular*@
+        <script src="@routes.Assets.versioned("app/app.js")" type="text/javascript"></script>
+
+        @*Configuracao do endereco da aplicacao e as rotas implementadas*@
+        <script src="@routes.Assets.versioned("app/services/address.service.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("app/services/baseurl.service.js")" type="text/javascript"></script>
+
+        @*Controllers*@
+        <script src="@routes.Assets.versioned("app/controllers/home.controller.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("app/controllers/colaborador.controller.js")" type="text/javascript"></script>
+    </body>
+</html>
