--- a/public/app/views/colaboradores/detail.html
+++ b/public/app/views/colaboradores/detail.html
@@ -7,7 +7,7 @@
                 </button>
                 <ul class="dropdown-menu">
                     <li><a ng-click="cancel()" href="">Voltar</a></li>
-                    <li><a href="">Editar</a></li>
+                    <li><a href="/#/colaborador/editar/{{colaborador.id}}">Editar</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a ng-click="open('sm')" href="">Excluir</a></li>
                 </ul>
