--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,8 +7,6 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bower_components/bootstrap/dist/css/bootstrap.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bower_components/font-awesome/css/font-awesome.css")">
 
-        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css")">
-
         @*Angular Loading Bar*@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bower_components/angular-loading-bar/src/loading-bar.css")">
 
@@ -62,6 +60,8 @@
             </div>
         </div>
 
+        <script src="@routes.Assets.versioned("bower_components/jquery/dist/jquery.js")" type="text/javascript"></script>
+
         @*Angular*@
         <script src="@routes.Assets.versioned("bower_components/angular/angular.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("bower_components/angular-route/angular-route.js")" type="text/javascript"></script>
@@ -70,11 +70,12 @@
         <script src="@routes.Assets.versioned("bower_components/angular-animate/angular-animate.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("bower_components/angular-sanitize/angular-sanitize.js")" type="text/javascript"></script>
 
-        <script src="@routes.Assets.versioned("bower_components/jquery/dist/jquery.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("bower_components/bootstrap/dist/js/bootstrap.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("bower_components/moment/moment.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("bower_components/moment/locale/pt-br.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
+
+        <script src="@routes.Assets.versioned("bower_components/angular-strap/dist/angular-strap.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/angular-strap/dist/angular-strap.tpl.js")" type="text/javascript"></script>
 
         <!--UI Boostrap-->
         <script src="@routes.Assets.versioned("bower_components/angular-bootstrap/ui-bootstrap-tpls.js")" type="text/javascript"></script>
