--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -16,6 +16,8 @@
         @*Angular Motion*@
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bower_components/angular-motion/dist/angular-motion.css")">
 
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css")">
+
         <title>Recursos Humanos</title>
     </head>
     <body>
@@ -61,6 +63,9 @@
         </div>
 
         <script src="@routes.Assets.versioned("bower_components/jquery/dist/jquery.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/moment/moment.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/bootstrap/dist/js/bootstrap.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js")" type="text/javascript"></script>
 
         @*Angular*@
         <script src="@routes.Assets.versioned("bower_components/angular/angular.js")" type="text/javascript"></script>
@@ -69,13 +74,7 @@
         <script src="@routes.Assets.versioned("bower_components/angular-aria/angular-aria.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("bower_components/angular-animate/angular-animate.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("bower_components/angular-sanitize/angular-sanitize.js")" type="text/javascript"></script>
-
-        <script src="@routes.Assets.versioned("bower_components/bootstrap/dist/js/bootstrap.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("bower_components/moment/moment.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("bower_components/moment/locale/pt-br.js")" type="text/javascript"></script>
-
-        <script src="@routes.Assets.versioned("bower_components/angular-strap/dist/angular-strap.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.versioned("bower_components/angular-strap/dist/angular-strap.tpl.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("bower_components/angular-bootstrap-datetimepicker-directive/angular-bootstrap-datetimepicker-directive.js")" type="text/javascript"></script>
 
         <!--UI Boostrap-->
         <script src="@routes.Assets.versioned("bower_components/angular-bootstrap/ui-bootstrap-tpls.js")" type="text/javascript"></script>
